# drones

./: .gitignore  README.md  config_linux  zshrc
apparmor-apparmor-2.13/: .gitignore  compile-notes  hexdump  printexprtree.py
apparmor-apparmor-2.13/parser/: Makefile  af_unix.cc  demoprofile  demoprofile1  hex_dump.c  hex_dump.h  network.h  parser.h  parser_interface.c  parser_lex.l  parser_main.c  parser_misc.c  parser_policy.c  parser_regex.c  parser_variable.c  parser_yacc.y  profile.h  ptrace.cc  testing-lex.cpp
apparmor-apparmor-2.13/parser/libapparmor_re/: aare_rules.cc
coding/: 1udp_server  a.out  client  client.c  new_udp_server.cpp  test.cpp  udp_client  udp_client.cpp  udp_server  udp_server.cpp
coding/fifo/: reader  writer
coding/file/: .reader.cpp.swp  reader  reader.cpp  tmp  writer  writer.cpp
coding/messagequeue/: reader  reader.cpp  writer  writer.cpp
coding/pipe/: pipe_example.c
coding/sharedmemory/: newreader.cpp  newwriter  newwriter.cpp  reader  reader.cpp  test  test.cpp  writer  writer.cpp
coding/strings/: concat  concat.c
coding/tcp/: client_tcp  client_tcp.cpp  client_tcp.cpp~  server_tcp  server_tcp.cpp  test.cpp
coding/unix/: client  server
coding/xattr/: f.txt  set_get  set_get.c
linux-5.1.3/include/linux/: kernel.h
linux-5.1.3/init/: main.c
linux-5.1.3/net/ipv4/: udp.c
linux-5.1.3/security/apparmor/: lsm.c  policy_unpack.c
linux-5.2.1/: .config
linux-5.2.1/include/linux/: kernel.h  msg.h  skbuff.h
linux-5.2.1/include/net/: sock.h
linux-5.2.1/init/: main.c
linux-5.2.1/ipc/: shm.c  util.h
linux-5.2.1/net/: socket.c
linux-5.2.1/net/ipv4/: tcp.c  tcp_ipv4.c  tcp_output.c  udp.c
linux-5.2.1/security/apparmor/: apparmorfs.c  label.c  lsm.c  policy.c  policy_unpack.c
nvidia_jetson_kernel_v4.9/net/ipv4/: tcp_ipv4.c  tcp_output.c  udp.c
nvidia_jetson_kernel_v4.9/security/apparmor/: lsm.c  policy.c  policy_unpack.c
profiles/etc/apparmor.d/: bin.mount  home.abhishek.drones.coding.file.reader  home.abhishek.drones.coding.file.writer  home.abhishek.drones.coding.messagequeue.reader  home.abhishek.drones.coding.messagequeue.writer  home.abhishek.drones.coding.sharedmemory.reader  home.abhishek.drones.coding.sharedmemory.writer  home.abhishek.drones.coding.tcp.client_tcp  home.abhishek.drones.coding.tcp.server_tcp  home.abhishek.drones.coding.udp_client  home.abhishek.drones.coding.udp_server  home.abhishek.drones.coding.unix.client  home.abhishek.drones.coding.unix.server  home.abhishek.ros2_ws.build.demo_nodes_cpp.listener  home.abhishek.ros2_ws.build.demo_nodes_cpp.talker  home.abhishek.ros2_ws.build.image_tools.camera  home.abhishek.ros2_ws.build.image_tools.filterapp  home.abhishek.ros2_ws.build.image_tools.showimage  lib.apparmor.apparmor.systemd  lib.netplan.generate  sbin.plymouthd  usr.bin.basename  usr.bin.snap  (+1 more)
ros2/image_tools/: CMakeLists.txt
ros2/image_tools/src/: camera.cpp  (+2 more)
ros2/templates/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2/templates/src/: camera.cpp  filterapp.cpp  lib_sensor_msgs_image.cpp  lib_std_msgs_int32.cpp  lib_std_msgs_string.cpp  sensor_msgs_image.cpp  sensor_msgs_image.hh  shape.hh  showimage.cpp  std_msgs_int32.cpp  std_msgs_int32.hh  std_msgs_string.cpp  std_msgs_string.hh  testdcl.cpp
script/genral/: apparmor_ioctl  apparmor_ioctl.c  compile_apparmor_parser.sh  execute.sh
script/rakesh/: commands  cygnus_compile_transfer.sh  cygnus_copy_compile_transfer.sh  predator_compile.sh  predator_copy_compile_transfer.sh  usr.sbin.avahi-daemon
(+192 files in other folders)
